--- a/claimgrant.html
+++ b/claimgrant.html
@@ -201,6 +201,7 @@
                                         <input class="contac_control" placeholder="Occupation" type="type" id="occupation">                          
                                      </div>
                                      <div class="col-md-12">
+                                        <p>Valid Id:</p>
                                         <input class="contac_control" placeholder="State ID or Driver's Licence" type="file" id="idcard">                          
                                      </div>
                                      <div class="col-md-12">
@@ -208,8 +209,8 @@
                                      </div>
                                        
                                        <div class="col-md-12">
-                                          <button class="send_btn" type="submit"> Proceed</button>
-                                          <input type="submit" value="submit" class="sub" id="submit">
+<!--                                           <button class="send_btn" type="submit"> Proceed</button> -->
+                                          <input type="submit" value="submit" class="send_btn" id="submit">
                                        </div>
                                        <div class="col-md-12 message">
                                           <div class="success" id="success">
