--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                            <div class="center-desk">
                               <div class="logo">
                                  <a href="index.html">
-                                    <h2 style="color: #fbca47; font-weight: 900;">Gov relief grant</h2>
-                                    
+                                    <img src="images/logoo.png" alt=""> 
                                  </a>
                               </div>
                            </div>
@@ -71,14 +70,17 @@
                                  <li class="nav-item">
                                     <a class="nav-link" href="#service">Services </a>
                                  </li>
-                                 <li class="nav-item">
+                                 <!-- <li class="nav-item">
                                     <a class="nav-link" href="benefit.html ">Beneficiaries</a>
-                                 </li>
+                                 </li> -->
                                  <li class="nav-item">
                                     <a class="nav-link" href="claimgrant.html">Claim Grant</a>
                                  </li>
                                  <li class="nav-item">
                                     <a class="nav-link" href="#">Contact Us</a>
+                                 </li>
+                                 <li class="nav-item">
+                                    <a class="nav-link" href="login.html">Login</a>
                                  </li>
                                  <!-- <li class="nav-item d_none le_co">
                                     <a class="nav-link" href="#"><i  class="fa fa-user" aria-hidden="true"></i> Login</a>
@@ -118,7 +120,7 @@
                                     </div>
                                     <div class="col-md-12 col-lg-5">
                                        <div class="text_img">
-                                          <figure><img src="images/ban_img.png" alt="#"/></figure>
+                                          <figure><img src="images/do6.png" alt="#"/></figure>
                                        </div>
                                     </div>
                                  </div>
@@ -139,7 +141,7 @@
                                     </div>
                                     <div class="col-md-12 col-lg-5">
                                        <div class="text_img">
-                                          <figure><img src="images/ban_img.png" alt="#"/></figure>
+                                          <figure><img src="images/doo2.png" alt="#"/></figure>
                                        </div>
                                     </div>
                                  </div>
@@ -160,7 +162,7 @@
                                     </div>
                                     <div class="col-md-12 col-lg-5">
                                        <div class="text_img">
-                                          <figure><img src="images/ban_img.png" alt="#"/></figure>
+                                          <figure><img src="images/doo1.png" alt="#"/></figure>
                                        </div>
                                     </div>
                                  </div>
@@ -186,7 +188,7 @@
             <div class="row d_flex">
                <div class="col-md-12 col-lg-5">
                   <div class="about_img">
-                     <figure><img src="images/about.png" alt="#"/></figure>
+                     <figure><img src="images/woman.png" alt="#"/></figure>
                   </div>
                </div>
                <div class="col-md-12 col-lg-7">
@@ -451,12 +453,12 @@
                <div class="row">
                   <div class="col-lg-3 col-md-6 col-sm-6">
                      <a class="logo2" href="index.html">
-                        <!-- <img src="images/loogo2.png" alt="#"/> -->
-                        <h3>Government Relief Grant</h3>
+                        <img src="images/logoo.png" alt="#"/>
+                       
                      </a>
-                     <div class="follow">
+                     <!-- <div class="follow">
                         <p> This is a government and state development initiative that awards grants totaling billions of dollars to numerous organizations every year.</p>
-                     </div>
+                     </div> -->
                   </div>
                   <div class="col-lg-3 col-md-6 col-sm-6">
                      <h3>Quick link</h3>
@@ -469,7 +471,7 @@
                      </ul>
                   </div>
                   <div class="col-lg-3 col-md-6 col-sm-6">
-                     <h3>Instagram </h3>
+                     <h3>Follow Us</h3>
                      <div class="follow">
                         <ul class="social_icon">
                            <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
